@@ -36,6 +36,8 @@
           (http://www.packetfence.org/mantis/view.php?id=393)
         Isolation of unregistered computers
           (http://www.packetfence.org/mantis/view.php?id=395)
+        Support for Cisco Aironet 1250
+          (http://www.packetfence.org/mantis/view.php?id=397)
 
 
 1.7.3
